--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,4 @@
-html,body,main,h1,ul,li
+html,body,h1,ul,li
   margin: 0
   padding: 0
 
@@ -9,37 +9,50 @@ html,body
 
 body
   color: #262626
-  background: #f3f3f3
+  background-color: #f3f3f3
+  background-position: 0 0
+  background-size: cover
   min-height: 300px
 
-  h1
-    margin: 0 auto
-    padding: 20% 0 0
-    text-align: center
-    font-family: "Quicksand", sans-serif
-    font-size: 3em
+h1
+  margin: 0 auto
+  padding: 20% 0 0
+  text-align: center
+  font-family: "Quicksand", sans-serif
+  font-size: 3em
 
-  ul
-    margin: 0 auto
-    padding: 5% 0
-    list-style: none
-    text-align: center
-  
-    li
-      margin: 0 .6em 0
-      display: inline-block
-  
-  a
-    color: #262626
-    text-decoration: none
+ul
+  margin: 0 auto
+  padding: 5% 0
+  list-style: none
+  text-align: center
 
-    &:hover
-      color: #777777
+  li
+    margin: 0 .6em 0
+    display: inline-block
+    @media screen and (max-width:480px)
+      margin: 15px auto
+      padding: 0 0 0 16px
+      display: block
+      width: 120px
+      text-align: left
 
-  .more
-    position: absolute
-    bottom: 10px
-    right: 10px
-    overflow: hidden
-    width: 1em
-    height: 1em
+    a
+      color: #262626
+      text-decoration: none
+      @media screen and (max-width:480px)
+        display: block
+        width: 120px
+        height: 30px
+        line-height: 30px
+
+  &:hover
+    color: #777777
+
+.more
+  position: absolute
+  bottom: 10px
+  right: 10px
+  overflow: hidden
+  width: 1em
+  height: 1em
